# TkRemoteBiff

./: Makefile.am  TkRemoteBiff.src  aclocal.m4  bootstrap  configure.ac
BuildScripts/: Makefile.am
Scripts/: Makefile.am  Makefile.in  ReadConfiguration.tcl
m4/: ax_tcl_libraries.m4
